update files project

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Codificador de Textos - Challenge ONE</title>
+  <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-  <h1 class="titulo">código secreto</h1>
+  <h1 class="titulo">Criptografe seu texto</h1>
 
   <main class="main">
     <section class="form box">
@@ -27,6 +27,6 @@
     </section>
   </main>
 
-  <script src="script.js"></script>
+  <script src="/src/js/decodificador.js"></script>
 </body>
 </html>
