--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
   </main>
 
   <script src="/src/js/decodificador.js"></script>
+  <script src="/src/js/codificador.js"></script>
 </body>
 </html>
