--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <section class="form box">
       <form action="">
         <label for="input-texto">Apenas letras minúsculas, sem acento</label>
-        <input class="text-input" type="text" name="input-texto" id="input-texto" placeholder="insira o texto aqui">
-        <input class="btn" type="submit" value="criptografar!" id="btn-cripto">
-        <input class="btn" type="submit" value="descriptografar!" id="btn-descripto">
+        <input class="text-input" type="text" name="input-text" id="input-text" placeholder="insira o texto aqui">
+        <input class="btn" type="submit" value="criptografar!" id="button-encrypt">
+        <input class="btn" type="submit" value="descriptografar!" id="btn-descript">
       </form>
     </section>
   
@@ -27,7 +27,7 @@
     </section>
   </main>
 
-  <script src="/src/js/decodificador.js"></script>
   <script src="/src/js/codificador.js"></script>
+  <!-- <script src="/src/js/decodificador.js"></script> -->
 </body>
 </html>
