feito criptografia - craindo descriptografia

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <label for="input-texto">Apenas letras minúsculas, sem acento</label>
         <input class="text-input" type="text" name="input-text" id="input-text" placeholder="insira o texto aqui">
         <input class="btn" type="submit" value="criptografar!" id="button-encrypt">
-        <input class="btn" type="submit" value="descriptografar!" id="btn-descript">
+        <input class="btn" type="submit" value="descriptografar!" id="button-decrypt">
       </form>
     </section>
   
@@ -28,6 +28,6 @@
   </main>
 
   <script src="/src/js/codificador.js"></script>
-  <!-- <script src="/src/js/decodificador.js"></script> -->
+  <script src="/src/js/decodificador.js"></script>
 </body>
 </html>
