finalizado descritografia e copia

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     <section class="msg box">
       <h2 id="">Mensagem criptografada:</h2>
       <input class="text-input" type="text" id="msg"></input>
-      <input class="btn" type="submit" value="copiar" id="btn-copy">
+      <input class="btn" type="submit" value="copiar" id="button-copy">
     </section>
   </main>
 
   <script src="/src/js/codificador.js"></script>
   <script src="/src/js/decodificador.js"></script>
+  <script src="/src/js/copyText.js"></script>
 </body>
 </html>
