add button limpa mensagem criptografada

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
           <h3 class="title-text">Mensagem criptografada:</h3>
           <!-- <input class="text-input" type="text" id="msg"></input> -->
           <textarea class="text-area" name="text-area" id="msg"></textarea>
-          <input class="btn" type="submit" value="copiar" id="button-copy" />
+          <input class="btn" type="submit" value="Copiar" id="button-copy" />
+          <input class="btn" type="submit" value="Limpar" id="button-clear" />
         </section>
       </main>
 
