ajust imagem de fundo e deixando disabled box mensagem

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
         <section class="msg box">
           <h3 class="title-text">Mensagem criptografada:</h3>
           <!-- <input class="text-input" type="text" id="msg"></input> -->
-          <textarea class="text-area" name="text-area" id="msg"></textarea>
+          <textarea
+            class="text-area msg"
+            name="text-area"
+            id="msg"
+            disabled
+          ></textarea>
           <input class="btn" type="submit" value="Copiar" id="button-copy" />
           <input class="btn" type="submit" value="Limpar" id="button-clear" />
         </section>
