update urls index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
 
     <title>Codificador de Textos - Challenge ONE</title>
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
   </head>
   <body>
     <div class="container">
@@ -59,9 +59,9 @@
         </section>
       </main>
 
-      <script src="/src/js/codificador.js"></script>
-      <script src="/src/js/decodificador.js"></script>
-      <script src="/src/js/copyText.js"></script>
+      <script src="src/js/codificador.js"></script>
+      <script src="src/js/decodificador.js"></script>
+      <script src="src/js/copyText.js"></script>
     </div>
   </body>
 </html>
